[package]
name = "sqfs"
version = "0.1.0"
authors = ["Zachary Dremann <dremann@gmail.com>"]
edition = "2018"

[features]
default = ["gzip"]

gzip = ["flate2"]
lzma = []
lzo = []
xz = []
lz4 = []
zstd = []

[dependencies]
positioned_io = { package = "positioned-io-preview", version = "0.3.3", path = "../positioned-io" }
packed_serialize = { path = "packed_serialize" }
repr = { path = "repr" }

bstr = "0.2"
bitflags = "1.2"
byteorder = "1.3"
chrono = "0.4"
parking_lot = "0.11"
slog = "2.5"
slog-stdlog = "4.0"
thiserror = "1.0"
thread_local = "1.0"

flate2 = { version = "1.0", optional = true }

[dev-dependencies]
sloggers = "1.0"

[workspace]
