[package]
name = "sqfs"
version = "0.1.0"
authors = ["Zachary Dremann <dremann@gmail.com>"]
edition = "2018"

[features]
default = ["gzip"]

gzip = ["flate2"]
lzma = []
lzo = []
xz = []
lz4 = []
zstd = []

[dependencies]
positioned_io = { package = "positioned-io-preview", version = "0.3.3", git = "https://github.com/Dr-Emann/positioned-io.git", branch = "write_at_shared_ref" }
repr = { path = "repr" }
async_positioned_io = { path = "async_positioned_io" }

async-trait = "0.1.51"
bitflags = "1.2"
bstr = "0.2"
byteorder = "1.3"
chrono = "0.4"
indexmap = "1.7"
parking_lot = "0.11"
slog = "2.5"
slog-stdlog = "4.0"
static_assertions = "1.1.0"
thiserror = "1.0"
thread_local = "1.0"
tokio = { version = "1.13", features = ["full"] }
tracing = "0.1"

crossbeam-channel = "0.5"
futures = "0.3"
num_cpus = "1.13"
once_cell = "1.8"
zerocopy = "0.6"

flate2 = { version = "1.0", optional = true }

[dev-dependencies]
sloggers = "2.0"
tempfile = "3.2"

[workspace]
