[package]
name = "sqfs"
version = "0.1.0"
authors = ["Zachary Dremann <dremann@gmail.com>"]
edition = "2018"

[features]
default = ["gzip", "zstd"]

gzip = ["flate2"]
lzma = []
lzo = []
xz = []
lz4 = []

[dependencies]
repr = { path = "repr" }
swiss-reader = { path = "swiss-reader" }

async-trait = "0.1.51"
bitflags = "1.2"
bstr = "0.2"
byteorder = "1.3"
chrono = "0.4"
indexmap = "1.7"
parking_lot = "0.12"
slog = "2.5"
slog-stdlog = "4.0"
static_assertions = "1.1.0"
thiserror = "1.0"
thread_local = "1.0"
tokio = { version = "1.13", features = ["full"] }
tracing = "0.1"

flume = "0.10"
futures = "0.3"
num_cpus = "1.13"
once_cell = "1.8"
zerocopy = "0.6"

flate2 = { version = "1.0", optional = true }
zstd = { version = "0.11", optional = true }

[dev-dependencies]
sloggers = "2.0"
tempfile = "3.2"

[workspace]
