[package]
name = "async_positioned_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
tokio = { version = "1.13", features = ["rt"]}

[dev-dependencies]
tempfile = "3.2"
tokio = { version = "1.13", features = ["rt", "test-util"]}
