[package]
name = "packed_serialize"
version = "0.1.0"
authors = ["Zachary Dremann <dremann@gmail.com>"]
edition = "2018"

[lib]


[features]
default = ["derive"]
derive = ["packed_serialize_derive"]

[dependencies]
packed_serialize_derive = { path = "../packed_serialize_derive", optional=true }
generic-array = "0.13.0"

[dev-dependencies]
packed_serialize_derive = { path = "../packed_serialize_derive" }
